src/test/ui/type-alias-impl-trait/issue-63279.min_tait.stderr
error[E0658]: type alias impl trait is not permitted here
  --> $DIR/issue-63279.rs:11:11
   |
LL |     || -> Closure { || () }
   |           ^^^^^^^
   |
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0271]: type mismatch resolving `<[closure@$DIR/issue-63279.rs:11:5: 11:28] as FnOnce<()>>::Output == ()`
  --> $DIR/issue-63279.rs:8:16
   |
LL | type Closure = impl FnOnce();
   |                ^^^^^^^^^^^^^ expected `()`, found opaque type
   |
   = note: expected unit type `()`
            found opaque type `impl FnOnce<()>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0658.
For more information about an error, try `rustc --explain E0271`.
